# AutoDrone_ObjectTracking

./: .gitignore  .gitmodules  README.md  environment.yml  setup_data.sh
demo_openvino/: CMakeLists.txt  CMakeLists.txt.bak  nanodet.mapping  nanodet.xml
demo_openvino/include/: nanodet_openvino.h
demo_openvino/src/: main.cpp
object_tracking/: CMakeLists.txt  package.xml
object_tracking/include/: nanodet_openvino.h
object_tracking/src/: cv-helpers.hpp  main.cpp  nanodet.mapping  nanodet.xml  nanodet_openvino.cpp
train_cfgs/: nanodet-m-1.5x-640_360.yml  nanodet-plus-m-1.5x_416.yml  nanodet-plus-m-1.5x_512-288.yml  nanodet-plus-m-1.5x_640_360.yml
